# one-router

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  README_CN.md  docker-compose.yml
.github/workflows/: release.yml
.superpowers/brainstorm/77264-1774418311/: .events  .server-stopped  layout-options.html  modules.html
.superpowers/brainstorm/79552-1774422454/: .server-stopped  full-mockup.html
admin-ui/: .gitignore  .npmrc  .prettierrc  .stylelintrc  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  stats.html  tsconfig.app.json  tsconfig.node.json  uno.config.ts  vite.config.ts
admin-ui/src/: App.vue  main.ts
admin-ui/src/api/: backends.ts  flags.ts  keys.ts  mappings.ts  settings.ts  types.ts  update.ts  usage.ts
admin-ui/src/components/: BackendModal.vue  KeyModal.vue  MappingModal.vue
data/: gateway.db
docker/: Dockerfile  Dockerfile.prebuilt  Dockerfile.release
docs/design/: improvements-from-bedrock-proxy.md
docs/future/: encryption-key-rotation.md
scripts/: apprunner-status.sh  backend-config-builder.sh  deploy-apprunner.sh  deploy-lightsail.sh  docker-publish.sh  lightsail-status.sh  migrate-model-mappings.sh
scripts/migrations/: README.md  run.sh
src/: lib.rs  main.rs
src/api/: chat_completions.rs  embeddings.rs  health.rs  images.rs  messages.rs  mod.rs  models.rs  ptc_handler.rs  rerank.rs  usage.rs
src/config/: aws.rs  mod.rs  settings.rs
src/converters/: anthropic_bedrock.rs  anthropic_gemini.rs  anthropic_openai.rs  cache_transform.rs  capability_filter.rs  mod.rs  openai_bedrock.rs  openai_gemini.rs  sdk_utils.rs
src/database/: encryption.rs  mod.rs  models.rs  seed.rs  traits.rs
src/error/: mod.rs  types.rs
src/middleware/: admin_auth.rs  auth.rs  mod.rs  rate_limit.rs
src/schemas/: anthropic.rs  bedrock.rs  embeddings.rs  gemini.rs  images.rs  mod.rs  openai.rs  rerank.rs
src/server/: app.rs  routes.rs  state.rs
src/services/: bedrock.rs  capabilities.rs  gemini.rs  mod.rs  model_mapping.rs  passthrough.rs  service_tier.rs  update.rs  usage_tracker.rs
src/utils/: api_key.rs  mod.rs  retry.rs  string.rs  timeout.rs  tokens.rs  tool_name_mapper.rs
static/admin/: app.css  app.js  index.html
(+282 files in other folders)
