[package]
name = "one-router"
version = "0.2.0"
edition = "2021"
authors = ["XtraVisions"]
description = "Unified LLM API router — route OpenAI & Anthropic protocols to Bedrock, Gemini, and more"
license = "MIT"
keywords = ["llm", "api", "gateway", "openai", "anthropic", "bedrock", "gemini"]
categories = ["web-programming::http-server", "network-programming"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-stream = "0.3"
async-trait = "0.1"

# HTTP client (using rustls for cross-compilation compatibility)
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Serialization & validation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AWS SDK (using rustls for cross-compilation compatibility)
aws-config = { version = "1.1", default-features = false, features = ["rustls"] }
aws-sdk-bedrockruntime = "1.11"
aws-sdk-dynamodb = "1.11"
aws-smithy-runtime-api = "1.1"
aws-smithy-types = "1.3.6"

# Docker API (for PTC, using rustls)
bollard = { version = "0.16", default-features = false, features = ["ssl", "rustls"] }
tar = "0.4"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"] }

# Encryption
aes-gcm = "0.10"
hkdf = "0.12"
sha2 = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Monitoring
prometheus = "0.13"

# Environment
dotenvy = "0.15"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Random number generation (for jitter)
rand = "0.8"

# Base64 encoding/decoding
base64 = "0.22"

# Rate limiting
governor = "0.6"

# Caching
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
tempfile = "3.10"
